deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product
        image: us-central1-docker.pkg.dev/ayush-1008/my-repo/product/app:latest
        ports:
        - containerPort: 8080
