route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-routes
spec:
  parentRefs:
    - name: web-gateway
      namespace: default
      sectionName: https
  hostnames:
  - "34.54.202.29.nip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: product-service
          port: 80
